--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -44,7 +44,7 @@ on init
     # Set permissions for persist partition
     mkdir /persist 0771 system system
 
-    export LD_SHIM_LIBS /system/vendor/lib64/lib-imsdpl.so|libshim_boringssl.so:/system/lib64/libril.so|libshim_ril.so:/system/vendor/lib/libmmqjpeg_codec.so|libboringssl-compat.so
+    export LD_SHIM_LIBS "/system/vendor/lib64/lib-imsdpl.so|libshim_boringssl.so:/system/lib64/libril.so|libshim_ril.so:/system/vendor/lib/libmmqjpeg_codec.so|libboringssl-compat.so"
 
     # Enable power-on alarm
     write /sys/module/qpnp_rtc/parameters/poweron_alarm 1
