--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -29,6 +29,7 @@ import init.qcom.usb.rc
 import init.qcom-ims.rc
 import init.qcom.power.rc
 import init.target.rc
+import /init.zygote64_32.rc
 
 on early-init
     mkdir /firmware 0771 system system
